[gd_scene load_steps=10 format=2]

[ext_resource path="res://imag/BG/Paint_MIneGameDinheiro.jpg" type="Texture" id=1]
[ext_resource path="res://imag/BtnDinheiroMineGame_Pontos.png" type="Texture" id=2]
[ext_resource path="res://code/Node2Dcode.gd" type="Script" id=3]
[ext_resource path="res://imag/BtnDinheiroMineGame_Tempo.png" type="Texture" id=4]
[ext_resource path="res://imag/AssetMineGameDinheiro_Fala.png" type="Texture" id=5]
[ext_resource path="res://Telas/AudioStreamPlayer.gd" type="Script" id=6]
[ext_resource path="res://imag/Mao.png" type="Texture" id=7]
[ext_resource path="res://code/Mouse.gd" type="Script" id=13]

[sub_resource type="CircleShape2D" id=4]
radius = 25.02

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ -230.0 ]
}
maxDinheiro = 15

[node name="Control" type="Control" parent="."]
margin_left = 30.0
margin_top = 19.0
margin_right = 992.0
margin_bottom = 581.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control"]
wait_time = 0.5

[node name="BtnTempo" type="Sprite" parent="Control"]
position = Vector2( 119, 65 )
z_index = -1
texture = ExtResource( 4 )

[node name="BtnPontos" type="Sprite" parent="Control"]
position = Vector2( 831, 63 )
z_index = -1
texture = ExtResource( 2 )

[node name="Titulo" type="Sprite" parent="Control"]
position = Vector2( 477, 106 )
z_index = 3
texture = ExtResource( 5 )

[node name="ProgressBar" type="Label" parent="Control"]
anchor_left = 0.853
anchor_top = 0.101
anchor_right = 0.875
anchor_bottom = 0.126
margin_left = 0.41394
margin_top = 0.237999
margin_right = 0.249939
margin_bottom = 0.187996
text = "oi"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.061
anchor_top = 0.105
anchor_right = 0.188
anchor_bottom = 0.142
margin_left = 0.317997
margin_top = -0.0100021
margin_right = 0.143997
margin_bottom = 0.195999
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="."]
position = Vector2( 512, 302 )
z_index = -2
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mouse" type="Area2D" parent="."]
z_index = 2
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse"]
position = Vector2( 0, 5 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Mouse"]
position = Vector2( 2, 2 )
z_index = 2
texture = ExtResource( 7 )
hframes = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 6 )

[connection signal="timeout" from="Control/Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Mouse" to="." method="_on_Mouse_area_entered"]
[connection signal="area_entered" from="Mouse" to="Mouse" method="_on_Mouse_area_entered"]
